# genshin_fighter

./: Cargo.toml
.cargo/: config.toml
assets/: xl.json
assets/Working/xl/: xl.kra
src/: anim.rs  asset_library.rs  battle.rs  domain.rs  game.rs  main.rs  player.rs
